--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,7 +3,7 @@
   "description": "A Vue.js project",
   "private": true,
   "author": "John Leider <john@vuetifyjs.com>",
-  "version": "3.0.0-beta.15",
+  "version": "3.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vuetifyjs/vuetify.git",
@@ -33,7 +33,7 @@
     "vue-gtag-next": "^1.14.0",
     "vue-i18n": "^9.2.2",
     "vue-prism-component": "^2.0.0",
-    "vuetify": "^3.0.0-beta.15"
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
@@ -43,7 +43,7 @@
     "@types/rimraf": "^3.0.2",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/compiler-sfc": "^3.2.38",
-    "@vuetify/api-generator": "^3.0.0-beta.15",
+    "@vuetify/api-generator": "^3.0.0",
     "@vuetify/vite-ssg": "^0.19.0",
     "ajv": "^8.11.0",
     "front-matter": "^4.0.2",
