--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -36,6 +36,7 @@
     "vuetify": "^3.0.1"
   },
   "devDependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@intlify/vite-plugin-vue-i18n": "^6.0.1",
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
@@ -46,6 +47,7 @@
     "@vuetify/api-generator": "^3.0.1",
     "@vuetify/vite-ssg": "^0.19.0",
     "ajv": "^8.11.0",
+    "emailjs-com": "^3.2.0",
     "front-matter": "^4.0.2",
     "happy-dom": "^6.0.4",
     "jest": "^28.1.3",
