--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,6 +170,7 @@ jobs:
             /home/runner/.cache/Cypress
           key: ${{ runner.os }}-${{ hashFiles('./yarn.lock') }}
       - run: yarn global add vercel
+      - run: yarn --frozen-lockfile --non-interactive
 
 # TODO: crowdin is returning invalid markdown
 #      - name: Download eo-UY
