--- a/packages/vuetify/.gitignore
+++ b/packages/vuetify/.gitignore
@@ -7,3 +7,23 @@
 /lib-temp/
 /types-temp/
 /dist/
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.vercel
