--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -49,6 +49,7 @@
     "@vuetify/api-generator": "^3.0.3",
     "@vuetify/vite-ssg": "^0.19.0",
     "ajv": "^8.11.0",
+    "date-fns": "^2.29.3",
     "emailjs-com": "^3.2.0",
     "front-matter": "^4.0.2",
     "happy-dom": "^6.0.4",
