--- a/packages/docs/.env.example
+++ b/packages/docs/.env.example
@@ -10,3 +10,12 @@ VITE_COSMIC_BUCKET_WRITE_KEY=
 
 VITE_COSMIC_BUCKET_SLUG_STORE=
 VITE_COSMIC_BUCKET_READ_KEY_STORE=
+
+# Emailjs
+VITE_EMAILJS_SERVICE_ID=
+VITE_EMAILJS_TEMPLATE_ID=
+VITE_EMAILJS_PUBLIC_KEY=
+
+# Algolia
+VITE_DOCSEARCH_APP_ID=
+VITE_DOCSEARCH_API_KEY=
