feat(labs): add labs export (#16341)
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -64,6 +64,8 @@
     "./locale": "./lib/locale/index.mjs",
     "./locale/adapters/*": "./lib/locale/adapters/*.mjs",
     "./iconsets/*": "./lib/iconsets/*.mjs",
+    "./labs/components": "./lib/labs/components.mjs",
+    "./labs/*": "./lib/labs/*/index.mjs",
     "./*": "./*"
   },
   "typesVersions": {
