chore: update branch references

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
-  CROWDIN_BRANCH: next
-  LOCAL_BRANCH: docs/update-from-crowdin
+  CROWDIN_BRANCH: v3
 
 jobs:
   close:
@@ -182,7 +181,6 @@ jobs:
 #          push_translations: false
 #          export_only_approved: false
 #          download_language: eo
-#          localization_branch_name: ${{ env.LOCAL_BRANCH }}
 #          crowdin_branch_name: ${{ env.CROWDIN_BRANCH }}
 #          debug_mode: true
 
@@ -195,7 +193,6 @@ jobs:
 #          push_translations: false
 #          export_only_approved: false
 #          download_language: ja
-#          localization_branch_name: ${{ env.LOCAL_BRANCH }}
 #          crowdin_branch_name: ${{ env.CROWDIN_BRANCH }}
 #          debug_mode: true
 #
@@ -208,7 +205,6 @@ jobs:
 #          push_translations: false
 #          export_only_approved: false
 #          download_language: zh-CN
-#          localization_branch_name: ${{ env.LOCAL_BRANCH }}
 #          crowdin_branch_name: ${{ env.CROWDIN_BRANCH }}
 #          debug_mode: true
 
