--- a/.github/workflows/crowdin-uploads.yml
+++ b/.github/workflows/crowdin-uploads.yml
@@ -6,7 +6,7 @@ concurrency:
 on:
   push:
     branches:
-      - 'next'
+      - 'master'
     paths:
     - 'packages/api-generator/src/locale/en/**'
     - 'packages/docs/src/i18n/messages/en.json'
@@ -17,7 +17,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
   CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
-  CROWDIN_BRANCH: next
+  CROWDIN_BRANCH: v3
 
 jobs:
   upload-to-crowdin:
