--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -24,61 +24,61 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/head": "~0.7.6",
-    "algoliasearch": "^4.14.2",
-    "cosmicjs": "^4.2.10",
+    "algoliasearch": "^4.14.3",
+    "cosmicjs": "^4.3.1",
     "isomorphic-fetch": "^3.0.0",
     "lodash-es": "^4.17.21",
-    "pinia": "^2.0.14",
-    "prettier": "^2.7.1",
-    "prism-theme-vars": "^0.2.3",
-    "prismjs": "^1.28.0",
+    "pinia": "^2.0.30",
+    "prettier": "^2.8.4",
+    "prism-theme-vars": "^0.2.4",
+    "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
-    "vee-validate": "^4.7.3",
-    "vue": "^3.2.38",
+    "vee-validate": "^4.7.4",
+    "vue": "^3.2.47",
     "vue-gtag-next": "^1.14.0",
-    "vue-i18n": "^9.2.2",
-    "vue-instantsearch": "^4.6.0",
+    "vue-i18n": "^9.3.0-beta.16",
+    "vue-instantsearch": "^4.8.3",
     "vue-prism-component": "^2.0.0",
     "vuetify": "^3.1.4"
   },
   "devDependencies": {
-    "@emailjs/browser": "^3.9.1",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@emailjs/browser": "^3.10.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
     "@types/prismjs": "^1.26.0",
     "@types/rimraf": "^3.0.2",
     "@vitejs/plugin-basic-ssl": "^0.1.2",
     "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/compiler-sfc": "^3.2.38",
+    "@vue/compiler-sfc": "^3.2.47",
     "@vuetify/api-generator": "^3.1.4",
     "@vuetify/vite-ssg": "^0.19.0",
-    "ajv": "^8.11.0",
+    "ajv": "^8.12.0",
     "date-fns": "^2.29.3",
     "emailjs-com": "^3.2.0",
     "front-matter": "^4.0.2",
     "happy-dom": "^6.0.4",
     "jest": "^28.1.3",
-    "jest-runner-eslint": "^1.0.1",
+    "jest-runner-eslint": "^1.1.0",
     "jest-silent-reporter": "^0.5.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-anchor": "^8.4.1",
-    "markdown-it-attrs": "^4.1.4",
+    "markdown-it-anchor": "^8.6.6",
+    "markdown-it-attrs": "^4.1.6",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-header-sections": "^1.0.0",
-    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-meta": "^0.0.1",
-    "markdown-it-prism": "^2.2.4",
-    "markdownlint-cli": "^0.31.1",
-    "unplugin-vue-components": "^0.19.6",
-    "vite": "^3.0.9",
+    "markdown-it-prism": "^2.3.0",
+    "markdownlint-cli": "^0.33.0",
+    "unplugin-vue-components": "^0.19.9",
+    "vite": "^3.2.5",
     "vite-plugin-fonts": "^0.6.0",
     "vite-plugin-md": "^0.20.2",
     "vite-plugin-pages": "^0.25.0",
-    "vite-plugin-pwa": "^0.12.3",
+    "vite-plugin-pwa": "^0.12.8",
     "vite-plugin-vue-layouts": "^0.7.0",
-    "vite-plugin-vuetify": "^1.0.0-alpha.14",
-    "vue-tsc": "^0.35.2",
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-tsc": "^1.0.24",
     "workbox-precaching": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
