--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -108,18 +108,18 @@
     "cy:run": "percy exec -- cypress run --component"
   },
   "devDependencies": {
-    "@formatjs/intl": "^2.2.5",
+    "@formatjs/intl": "^2.6.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "@percy/cli": "^1.3.1",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@percy/cli": "^1.18.0",
     "@percy/cypress": "^3.1.2",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^28.1.8",
-    "@types/node": "^16.11.26",
+    "@types/node": "^18.13.0",
     "@types/resize-observer-browser": "^0.1.7",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
@@ -127,35 +127,35 @@
     "@vue/test-utils": "2.0.0",
     "@vueuse/head": "~0.7.6",
     "acorn-walk": "^8.2.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.13",
     "babel-plugin-add-import-extension": "1.5.1",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-define": "^2.0.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-define": "^2.1.0",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.1",
-    "cssnano": "^5.1.10",
+    "cssnano": "^5.1.14",
     "cy-mobile-commands": "^0.3.0",
-    "cypress": "^10.2.0",
+    "cypress": "^12.5.1",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.0",
     "dotenv": "^8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^25.7.0",
-    "fast-glob": "^3.2.11",
+    "fast-glob": "^3.2.12",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.1",
     "micromatch": "^4.0.5",
-    "postcss": "^8.4.14",
-    "rollup": "^2.75.3",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-sass": "^1.2.12",
+    "postcss": "^8.4.21",
+    "rollup": "^2.79.1",
+    "rollup-plugin-dts": "^4.2.3",
+    "rollup-plugin-sass": "^1.2.17",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "ts-json-schema-generator": "^1.0.0",
-    "vite": "^3.0.9",
+    "vite": "^3.2.5",
     "vite-ssr": "^0.16.0",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.15"
+    "vue-i18n": "^9.3.0-beta.16",
+    "vue-router": "^4.1.6"
   },
   "peerDependencies": {
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
