--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite-ssg build",
+    "build": "vite-ssg build && vite-ssg render",
     "build:dev": "vite build",
     "preview": "vite preview",
     "preview-https": "HTTPS=true vite preview",
@@ -52,7 +52,7 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/compiler-sfc": "^3.2.47",
     "@vuetify/api-generator": "^3.1.4",
-    "@vuetify/vite-ssg": "^0.19.0",
+    "@vuetify/vite-ssg": "^0.20.2",
     "ajv": "^8.12.0",
     "date-fns": "^2.29.3",
     "emailjs-com": "^3.2.0",
