--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-jest": "^28.1.3",
     "conventional-changelog-cli": "^2.2.2",
     "conventional-changelog-vuetify": "^1.1.0",
+    "conventional-github-releaser": "^3.1.5",
     "cross-env": "^7.0.3",
     "cross-spawn": "^6.0.5",
     "eslint": "^8.34.0",
