--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vue/compiler-sfc": "^3.2.47",
+    "@vueuse/head": "^1.0.26",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.3",
     "conventional-changelog-cli": "^2.2.2",
@@ -81,5 +82,8 @@
     "vue-analytics": "^5.16.1",
     "vue-router": "^4.1.6",
     "yargs": "^17.6.2"
+  },
+  "resolutions": {
+    "hookable": "npm:strict-hookable@5.4.3"
   }
 }
