--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "semver": "^6.2.0",
     "shelljs": "^0.8.5",
     "typescript": "^4.9.5",
+    "upath": "^2.0.1",
     "vite-plugin-inspect": "^0.6.1",
     "vue": "^3.2.47",
     "vue-analytics": "^5.16.1",
