--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest-environment-jsdom": "^28.1.3",
     "jest-serializer-html": "^7.1.0",
     "lerna": "^3.22.1",
+    "magic-string": "^0.30.0",
     "mkdirp": "^1.0.4",
     "moment": "^2.29.4",
     "patch-package": "^6.5.1",
