--- a/packages/vuetify/tsconfig.json
+++ b/packages/vuetify/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "src"
+    "src",
+    "dev"
   ],
   "exclude": ["types-temp"],
   "compilerOptions": {
