chore: update dependencies

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -102,9 +102,9 @@
     "dev:prod": "concurrently \"cross-env NODE_ENV=production vite build -w\" \"vite preview\"",
     "dev:typecheck": "vue-tsc --noEmit --skipLibCheck --project ./tsconfig.dev.json",
     "build": "rimraf lib dist && concurrently \"yarn build:dist\" \"yarn build:lib\" -n \"dist,lib\" --kill-others-on-fail -r && yarn build:types",
-    "build:dist": "rollup --config build/rollup.config.js",
+    "build:dist": "rollup --config build/rollup.config.mjs",
     "build:lib": "cross-env NODE_ENV=lib babel src --out-dir lib --source-maps --extensions \".ts\",\".tsx\",\".snap\" --copy-files --no-copy-ignored --out-file-extension .mjs",
-    "build:types": "rimraf types-temp && tsc --pretty --emitDeclarationOnly -p tsconfig.dist.json && rollup --config build/rollup.types.config.js && rimraf types-temp",
+    "build:types": "rimraf types-temp && tsc --pretty --emitDeclarationOnly -p tsconfig.dist.json && rollup --config build/rollup.types.config.mjs && rimraf types-temp",
     "tsc": "tsc",
     "debug:test": "cross-env NODE_ENV=test node --inspect --inspect-brk ../../node_modules/jest/bin/jest.js --no-cache -i --verbose",
     "test": "node build/run-tests.js",
@@ -117,51 +117,51 @@
     "cy:run": "percy exec -- cypress run --component"
   },
   "devDependencies": {
-    "@formatjs/intl": "^2.6.5",
+    "@formatjs/intl": "^2.6.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@percy/cli": "^1.20.3",
+    "@percy/cli": "^1.21.0",
     "@percy/cypress": "^3.1.2",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
+    "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^28.1.8",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.15.11",
     "@types/resize-observer-browser": "^0.1.7",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/test-utils": "2.0.0",
+    "@vue/test-utils": "2.3.2",
     "acorn-walk": "^8.2.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "babel-plugin-add-import-extension": "1.5.1",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-define": "^2.1.0",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.1",
-    "cssnano": "^5.1.14",
+    "cssnano": "^6.0.0",
     "cy-mobile-commands": "^0.3.0",
-    "cypress": "^12.7.0",
+    "cypress": "^12.9.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.7.6",
     "dotenv": "^8.6.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-cypress": "^2.13.1",
     "eslint-plugin-jest": "^25.7.0",
     "fast-glob": "^3.2.12",
     "identity-obj-proxy": "^3.0.0",
     "jest-canvas-mock": "^2.3.1",
     "micromatch": "^4.0.5",
     "postcss": "^8.4.21",
-    "rollup": "^2.79.1",
-    "rollup-plugin-dts": "^4.2.3",
-    "rollup-plugin-sass": "^1.2.17",
+    "rollup": "^3.20.2",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-sass": "^1.2.19",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-json-schema-generator": "^1.0.0",
-    "vite": "^3.2.5",
-    "vite-ssr": "^0.16.0",
+    "ts-json-schema-generator": "^1.2.0",
+    "vite": "^4.2.1",
+    "vite-ssr": "^0.17.1",
     "vue-i18n": "^9.3.0-beta.16",
     "vue-router": "^4.1.6"
   },
