chore(ci): use prerelease cypress version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
   test-cypress:
     name: Test (Cypress)
     needs: pre_job
-    if: needs.pre_job.outputs.should_skip != 'true' && github.ref != 'refs/heads/master'
+    if: needs.pre_job.outputs.should_skip != 'true'
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -94,6 +94,8 @@ jobs:
             /home/runner/.cache/Cypress
           key: ${{ runner.os }}-${{ hashFiles('./yarn.lock') }}
 
+      - run: npm pkg set devDependencies.cypress="https://cdn.cypress.io/beta/npm/12.8.2/linux-x64/retry-dynamic-imports-243502ae98b750e429789d373dd7175f487a62ee/cypress.tgz"
+        working-directory: ./packages/vuetify
       - run: yarn --frozen-lockfile --non-interactive
       - run: yarn cy:run --record --parallel --ci-build-id $GITHUB_RUN_ID
         if: ${{ !startswith(github.ref, 'refs/tags/v') && github.repository_owner == 'vuetifyjs' }}
