--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -70,7 +70,7 @@
     "markdown-it-prism": "^2.3.0",
     "markdownlint-cli": "^0.33.0",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.2.1",
+    "vite": "^4.3.0-beta.1",
     "unplugin-fonts": "^1.0.0",
     "vite-plugin-md": "^0.21.5",
     "vite-plugin-pages": "^0.29.0",
