--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "destination": "$1"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/).*)",
       "destination": "/_fallback"
     }
   ],
