--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -54,6 +54,7 @@
     "@vue/compiler-sfc": "^3.2.47",
     "@vuetify/api-generator": "^3.1.14",
     "@vuetify/vite-ssg": "^0.20.2",
+    "async-es": "^3.2.4",
     "ajv": "^8.12.0",
     "date-fns": "^2.29.3",
     "emailjs-com": "^3.2.0",
