docs: add CDN-Cache-Control to service worker

--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,11 @@
       "headers" : [
         {
           "key" : "Cache-Control",
-          "value" : "public, max-age=0, must-revalidate"
+          "value" : "public, max-age=0, s-maxage=0, must-revalidate"
+        },
+        {
+          "key" : "CDN-Cache-Control",
+          "value" : "max-age=0"
         }
       ]
     },
