--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,7 +224,7 @@ jobs:
           VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.EMAILJS_TEMPLATE_ID }}
           VITE_AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
           VITE_AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-          VITE_GITHUB_SHA: ${{ env.GITHUB_SHA }}
+          VITE_GITHUB_SHA: ${{ github.sha }}
       - uses: actions/upload-artifact@v3
         with:
           name: docs-dist
