chore(ci): log full jest output
(cherry picked from commit efb352ffadf93c097eb318e17625e8ef69995f42)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,8 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('./yarn.lock') }}
 
       - run: yarn --frozen-lockfile --non-interactive
-      - run: yarn lerna run test:coverage -- -- -i
+      - run: yarn run test:coverage -i
+        working-directory: ./packages/vuetify
       - uses: codecov/codecov-action@v1
 
   test-cypress:
