feat: support vue 3.3 (#17282)

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -35,7 +35,7 @@
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
     "vee-validate": "^4.8.4",
-    "vue": "^3.2.47",
+    "vue": "^3.3.1",
     "vue-gtag-next": "^1.14.0",
     "vue-i18n": "^9.3.0-beta.16",
     "vue-instantsearch": "^4.8.8",
@@ -50,8 +50,8 @@
     "@types/prismjs": "^1.26.0",
     "@types/rimraf": "^3.0.2",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/compiler-sfc": "^3.2.47",
+    "@vitejs/plugin-vue": "^4.2.2",
+    "@vue/compiler-sfc": "^3.3.1",
     "@vuetify/api-generator": "^3.2.1",
     "@vuetify/vite-ssg": "^0.20.2",
     "ajv": "^8.12.0",
@@ -74,13 +74,12 @@
     "markdownlint-cli": "^0.33.0",
     "unplugin-fonts": "^1.0.0",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.0-beta.2",
+    "vite": "^4.3.5",
     "vite-plugin-md": "^0.21.5",
     "vite-plugin-pages": "^0.29.0",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.2.0",
     "workbox-precaching": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
