--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -131,7 +131,7 @@
     "@types/jest": "^28.1.8",
     "@types/node": "^18.15.11",
     "@types/resize-observer-browser": "^0.1.7",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue": "^4.2.2",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "@vue/test-utils": "2.3.2",
@@ -161,7 +161,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "ts-json-schema-generator": "^1.2.0",
-    "vite": "^4.3.0-beta.2",
+    "vite": "^4.3.5",
     "vite-ssr": "^0.17.1",
     "vue-i18n": "^9.3.0-beta.16",
     "vue-router": "^4.1.6"
