fix(types): add exports entry for moduleResolution=bundler

--- a/packages/vuetify/package.json
+++ b/packages/vuetify/package.json
@@ -54,7 +54,8 @@
     ".": {
       "sass": "./lib/styles/main.sass",
       "style": "./lib/styles/main.css",
-      "default": "./lib/framework.mjs"
+      "default": "./lib/framework.mjs",
+      "types": "./lib/index.d.mts"
     },
     "./styles": {
       "sass": "./lib/styles/main.sass",
