--- a/.github/workflows/nightly-schedule.yml
+++ b/.github/workflows/nightly-schedule.yml
@@ -1,4 +1,4 @@
-name: Nightly Release
+name: Scheduled Nightly Release
 on:
   workflow_dispatch:
   schedule:
@@ -24,13 +24,7 @@ jobs:
             tag: 'v2-stable'
           - branch: 'v2-dev'
             tag: 'v2-dev'
-    env:
-      RELEASE_BRANCH: ${{ matrix.branch }}
-      RELEASE_TAG: ${{ matrix.tag }}
     steps:
-      - run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
       - uses: actions/checkout@v2
         with:
           ref: ${{ matrix.branch }}
@@ -43,26 +37,15 @@ jobs:
               echo "Last commit was more than 24 hours ago, skipping release"
               exit 1
           fi
-      - uses: ./.github/actions/yarn-install
-      - run: yarn lerna version $(node -e "console.log(require('./lerna.json').version)")-$RELEASE_BRANCH.$(date +'%Y-%m-%d') --no-push --no-commit-hooks --force-publish --yes
-      - run: yarn conventional-changelog -p angular --outfile ./packages/vuetify/CHANGELOG.md -r 2
-      - run: cat ./packages/vuetify/CHANGELOG.md
-      - run: >-
-          node -e "fs.writeFileSync(
-            './package.json',
-            JSON.stringify({ ...require('./package.json'), name: '@vuetify/nightly' }, null, 2)
-          )"
-        working-directory: ./packages/vuetify
-      - run: yarn lerna run build --scope @vuetify/nightly
-      - run: yarn lerna run build --scope @vuetify/api-generator
-      - run: ls -lah
-      - name: NPM Release
-        run: |
-          npm config set //registry.npmjs.org/:_authToken ${NPM_API_KEY:?}
-          npm publish ./packages/vuetify --tag $RELEASE_TAG --access public
-        env:
-          NPM_API_KEY: ${{ secrets.NPM_TOKEN }}
-          TAG_NAME: ${{ env.RELEASE_TAG }}
+      - run: echo "RELEASE_ID=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+      - uses: ./.github/actions/nightly-release
+        with:
+          checkout-repo: ${{ github.repository }}
+          checkout-ref: ${{ matrix.branch }}
+          release-id: ${{ matrix.branch }}.${{ env.RELEASE_ID }}
+          npm-tag: ${{ matrix.tag }}
+          npm-token: ${{ secrets.NPM_TOKEN }}
+      - uses: actions/checkout@v2
 
   percy:
     name: Visual regression tests
