--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -46,6 +46,7 @@
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
+    "@types/markdown-it-container": "^2.0.5",
     "@types/prismjs": "^1.26.0",
     "@types/rimraf": "^3.0.2",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
@@ -65,6 +66,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-attrs": "^4.1.6",
+    "markdown-it-container": "^3.0.0",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-header-sections": "^1.0.0",
     "markdown-it-link-attributes": "^4.0.1",
