--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,7 +25,7 @@
     "@vuelidate/core": "^2.0.1",
     "@vuelidate/validators": "^2.0.1",
     "algoliasearch": "^4.16.0",
-    "cosmicjs": "^4.3.1",
+    "@cosmicjs/sdk": "^1.0.9",
     "fflate": "^0.7.4",
     "isomorphic-fetch": "^3.0.0",
     "lodash-es": "^4.17.21",
